# rdkit-stubs

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  pyproject.toml  setup.py
.github/workflows/:  *Minibuf-1*  test.yml
rdkit-stubs/: RDConfig.pyi  TestRunner.pyi  __init__.pyi
rdkit-stubs/Avalon/: pyAvalonTools.pyi
rdkit-stubs/Chem/: AllChem.pyi  BRICS.pyi  BuildFragmentCatalog.pyi  ChemicalFeatures.pyi  Crippen.pyi  DSViewer.pyi  Descriptors.pyi  Descriptors3D.pyi  EnumerateStereoisomers.pyi  FilterCatalog.pyi  FragmentMatcher.pyi  FunctionalGroups.pyi  GraphDescriptors.pyi  Graphs.pyi  MACCSkeys.pyi  MCS.pyi  PandasTools.pyi  PyMol.pyi  Recap.pyi  SATIS.pyi  SaltRemover.pyi  __init__.pyi  inchi.pyi  rdCIPLabeler.pyi  rdChemReactions.pyi  rdChemicalFeatures.pyi  rdCoordGen.pyi  rdDeprotect.pyi  rdDistGeom.pyi  rdEHTTools.pyi  rdFingerprintGenerator.pyi  rdForceFieldHelpers.pyi  rdFreeSASA.pyi  rdMHFPFingerprint.pyi  rdMMPA.pyi  rdMolAlign.pyi  rdMolCatalog.pyi  rdMolChemicalFeatures.pyi  rdMolDescriptors.pyi  rdMolHash.pyi  (+13 more)
rdkit-stubs/Chem/AtomPairs/: Utils.pyi
rdkit-stubs/Chem/ChemUtils/: DescriptorUtilities.pyi  SDFToCSV.pyi
rdkit-stubs/Chem/Draw/: IPythonConsole.pyi  InteractiveRenderer.pyi  SimilarityMaps.pyi  __init__.pyi  aggCanvas.pyi  cairoCanvas.pyi  rdMolDraw2D.pyi  spingCanvas.pyi
rdkit-stubs/Chem/EState/: AtomTypes.pyi  EState.pyi
rdkit-stubs/Chem/FeatMaps/: FeatMapPoint.pyi  FeatMaps.pyi
rdkit-stubs/Chem/Features/: FeatDirUtilsRD.pyi
rdkit-stubs/Chem/Fraggle/: FraggleSim.pyi
rdkit-stubs/DataStructs/: HierarchyVis.pyi  LazySignature.pyi  TopNContainer.pyi  cDataStructs.pyi
rdkit-stubs/Dbase/: DbInfo.pyi  DbModule.pyi  DbReport.pyi  DbResultSet.pyi  DbUtils.pyi
rdkit-stubs/DistanceGeometry/: DistGeom.pyi
rdkit-stubs/ForceField/: rdForceField.pyi
rdkit-stubs/Geometry/: rdGeometry.pyi
rdkit-stubs/ML/: AnalyzeComposite.pyi  EnrichPlot.pyi  ScreenComposite.pyi
rdkit-stubs/ML/Data/: Stats.pyi  (+5 more)
rdkit-stubs/Numerics/: rdAlignment.pyi
rdkit-stubs/SimDivFilters/: rdSimDivPickers.pyi
rdkit-stubs/VLib/: Filter.pyi  Node.pyi  __init__.pyi
rdkit-stubs/sping/: stringformat.pyi
rdkit-stubs/utils/: cactvs.pyi  chemdraw.pyi  chemdraw_qax.pyi  chemutils.pyi  comhack.pyi  fileutils.pyi
src/rdkit-stubs/: RDLogger.pyi  RDPaths.pyi  RDRandom.pyi  rdBase.pyi
test/: Pipfile  pyproject.toml  requirements.txt  test.bash  test_stubs.py
(+212 files in other folders)
