[tool.poetry]
name = "rdkit-stubs"
version = "0.8"
description = "type stubs for rdkit"
authors = [
  "Andrew Dirksen <andrew@dirksen.com>",
  "Ryan Rightmer <rrightmer@gmail.com>",
  "K. Yanagisawa (https://github.com/keisuke-yanagisawa)",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/postera-ai/rdkit-stubs"
keywords = ["stubs", "rdkit", "typing"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Typing :: Stubs Only",
  "Programming Language :: Python :: 3.10",
]
packages = [{ include = "rdkit-stubs" }]
include = ["rdkit-stubs/**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
